Etapa4/parser.output
Terminals unused in grammar

    TK_PR_THEN
    TK_PR_FOREACH
    TK_PR_SWITCH
    TK_PR_CASE
    TK_PR_CLASS
    TK_PR_PRIVATE
    TK_PR_PUBLIC
    TK_PR_PROTECTED
    TK_PR_END
    TK_PR_DEFAULT
    '.'
    '$'
    TOKEN_ERRO


Grammar

    0 $accept: program $end

    1 program: globalVariable program
    2        | functionDefinition program
    3        | %empty

    4 optionalStatic: TK_PR_STATIC
    5               | %empty

    6 optionalConst: TK_PR_CONST
    7              | %empty

    8 globalVariable: optionalStatic type identifier globalVariableList ';'

    9 globalVariableList: ',' identifier globalVariableList
   10                   | %empty

   11 type: TK_PR_INT
   12     | TK_PR_FLOAT
   13     | TK_PR_CHAR
   14     | TK_PR_BOOL
   15     | TK_PR_STRING

   16 value: TK_LIT_INT
   17      | TK_LIT_FLOAT
   18      | TK_LIT_FALSE
   19      | TK_LIT_TRUE
   20      | TK_LIT_CHAR
   21      | TK_LIT_STRING

   22 functionDefinition: functionHeader functionCommandBlockInit commandBlockEnd

   23 functionHeader: functionName headerParametersBlockInit headerParametersBlockEnd

   24 functionName: optionalStatic type TK_IDENTIFICADOR

   25 headerParametersBlockInit: '('

   26 headerParametersBlockEnd: headerParameters ')'

   27 headerParameters: optionalConst type TK_IDENTIFICADOR headerParametersList
   28                 | %empty

   29 headerParametersList: ',' optionalConst type TK_IDENTIFICADOR headerParametersList
   30                     | %empty

   31 commandBlockInit: '{'

   32 commandBlockEnd: commandList '}'

   33 functionCommandBlockInit: '{'

   34 commandList: command commandList
   35            | %empty

   36 command: variableDeclaration ';'
   37        | attribution ';'
   38        | inputOutput ';'
   39        | functionCall ';'
   40        | shift ';'
   41        | executionControl ';'
   42        | fluxControl
   43        | commandBlockInit commandBlockEnd ';'

   44 attribution: TK_IDENTIFICADOR '=' expression
   45            | vector_identifier '=' expression

   46 inputOutput: input
   47            | output

   48 output: TK_PR_OUTPUT TK_IDENTIFICADOR
   49       | TK_PR_OUTPUT value

   50 input: TK_PR_INPUT TK_IDENTIFICADOR

   51 shift: TK_IDENTIFICADOR shiftOperator TK_LIT_INT
   52      | vector_identifier shiftOperator positive_integer

   53 shiftOperator: TK_OC_SL
   54              | TK_OC_SR

   55 executionControl: TK_PR_RETURN expression
   56                 | TK_PR_BREAK
   57                 | TK_PR_CONTINUE

   58 fluxControl: conditional
   59            | while
   60            | for

   61 conditional: TK_PR_IF '(' expression ')' commandBlockInit commandBlockEnd else

   62 else: TK_PR_ELSE commandBlockInit commandBlockEnd
   63     | %empty

   64 while: TK_PR_WHILE '(' expression ')' TK_PR_DO commandBlockInit commandBlockEnd

   65 for: TK_PR_FOR '(' attribution ':' expression ':' attribution ')' commandBlockInit commandBlockEnd

   66 expression: orLogicalExpression '?' expression ':' expression
   67           | orLogicalExpression

   68 orLogicalExpression: orLogicalExpression orLogicalOperator andLogicalExpression
   69                    | andLogicalExpression

   70 andLogicalExpression: andLogicalExpression andLogicalOperator bitwiseOrExpression
   71                     | bitwiseOrExpression

   72 bitwiseOrExpression: bitwiseOrExpression bitwiseOrOperator bitwiseAndExpression
   73                    | bitwiseAndExpression

   74 bitwiseAndExpression: bitwiseAndExpression bitwiseAndOperator equalityExpression
   75                     | equalityExpression

   76 equalityExpression: equalityExpression equalityOperator comparisonExpression
   77                   | comparisonExpression

   78 comparisonExpression: comparisonExpression comparisonOperator sumExpression
   79                     | sumExpression

   80 sumExpression: sumExpression sumOperator multiplicationExpression
   81              | multiplicationExpression

   82 multiplicationExpression: multiplicationExpression multiplicationOperator powerExpression
   83                         | powerExpression

   84 powerExpression: powerExpression powerOperator unaryExpression
   85                | unaryExpression

   86 unaryExpression: unaryOperator unaryExpression
   87                | operand

   88 orLogicalOperator: TK_OC_OR

   89 andLogicalOperator: TK_OC_AND

   90 bitwiseOrOperator: '|'

   91 bitwiseAndOperator: '&'

   92 equalityOperator: TK_OC_EQ
   93                 | TK_OC_NE

   94 comparisonOperator: TK_OC_LE
   95                   | TK_OC_GE
   96                   | '<'
   97                   | '>'

   98 sumOperator: '+'
   99            | '-'

  100 multiplicationOperator: '*'
  101                       | '/'
  102                       | '%'

  103 powerOperator: '^'

  104 unaryOperator: '+'
  105              | '-'
  106              | '!'
  107              | '&'
  108              | '*'
  109              | '?'
  110              | '#'

  111 variableDeclaration: optionalStatic optionalConst type variable variableDeclarationList

  112 variable: TK_IDENTIFICADOR
  113         | TK_IDENTIFICADOR TK_OC_LE value
  114         | TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR

  115 variableDeclarationList: ',' variable variableDeclarationList
  116                        | %empty

  117 functionCall: TK_IDENTIFICADOR '(' functionParameters ')'

  118 functionParameters: expression functionParametersList
  119                   | %empty

  120 functionParametersList: ',' expression functionParametersList
  121                       | %empty

  122 operand: TK_IDENTIFICADOR
  123        | vector_identifier
  124        | value
  125        | functionCall
  126        | '(' expression ')'

  127 vector_identifier: TK_IDENTIFICADOR '[' expression ']'

  128 identifier: TK_IDENTIFICADOR
  129           | TK_IDENTIFICADOR '[' positive_integer ']'

  130 positive_integer: '+' TK_LIT_INT
  131                 | TK_LIT_INT


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 106
    '#' (35) 110
    '$' (36)
    '%' (37) 102
    '&' (38) 91 107
    '(' (40) 25 61 64 65 117 126
    ')' (41) 26 61 64 65 117 126
    '*' (42) 100 108
    '+' (43) 98 104 130
    ',' (44) 9 29 115 120
    '-' (45) 99 105
    '.' (46)
    '/' (47) 101
    ':' (58) 65 66
    ';' (59) 8 36 37 38 39 40 41 43
    '<' (60) 96
    '=' (61) 44 45
    '>' (62) 97
    '?' (63) 66 109
    '[' (91) 127 129
    ']' (93) 127 129
    '^' (94) 103
    '{' (123) 31 33
    '|' (124) 90
    '}' (125) 32
    error (256)
    TK_PR_INT (258) 11
    TK_PR_FLOAT (259) 12
    TK_PR_BOOL (260) 14
    TK_PR_CHAR (261) 13
    TK_PR_STRING (262) 15
    TK_PR_IF <valor_lexico> (263) 61
    TK_PR_THEN (264)
    TK_PR_ELSE <valor_lexico> (265) 62
    TK_PR_WHILE <valor_lexico> (266) 64
    TK_PR_DO (267) 64
    TK_PR_INPUT <valor_lexico> (268) 50
    TK_PR_OUTPUT <valor_lexico> (269) 48 49
    TK_PR_RETURN <valor_lexico> (270) 55
    TK_PR_CONST (271) 6
    TK_PR_STATIC (272) 4
    TK_PR_FOREACH (273)
    TK_PR_FOR <valor_lexico> (274) 65
    TK_PR_SWITCH (275)
    TK_PR_CASE (276)
    TK_PR_BREAK <valor_lexico> (277) 56
    TK_PR_CONTINUE <valor_lexico> (278) 57
    TK_PR_CLASS (279)
    TK_PR_PRIVATE (280)
    TK_PR_PUBLIC (281)
    TK_PR_PROTECTED (282)
    TK_PR_END (283)
    TK_PR_DEFAULT (284)
    TK_OC_LE <valor_lexico> (285) 94 113 114
    TK_OC_GE <valor_lexico> (286) 95
    TK_OC_EQ <valor_lexico> (287) 92
    TK_OC_NE <valor_lexico> (288) 93
    TK_OC_AND <valor_lexico> (289) 89
    TK_OC_OR <valor_lexico> (290) 88
    TK_OC_SL <valor_lexico> (291) 53
    TK_OC_SR <valor_lexico> (292) 54
    TK_LIT_INT <valor_lexico> (293) 16 51 130 131
    TK_LIT_FLOAT <valor_lexico> (294) 17
    TK_LIT_FALSE <valor_lexico> (295) 18
    TK_LIT_TRUE <valor_lexico> (296) 19
    TK_LIT_CHAR <valor_lexico> (297) 20
    TK_LIT_STRING <valor_lexico> (298) 21
    TK_IDENTIFICADOR <valor_lexico> (299) 24 27 29 44 48 50 51 112 113 114 117 122 127 128 129
    TOKEN_ERRO (300)


Nonterminals, with rules where they appear

    $accept (71)
        on left: 0
    program <node> (72)
        on left: 1 2 3
        on right: 0 1 2
    optionalStatic <node> (73)
        on left: 4 5
        on right: 8 24 111
    optionalConst <node> (74)
        on left: 6 7
        on right: 27 29 111
    globalVariable <node> (75)
        on left: 8
        on right: 1
    globalVariableList <node> (76)
        on left: 9 10
        on right: 8 9
    type <type> (77)
        on left: 11 12 13 14 15
        on right: 8 24 27 29 111
    value <node> (78)
        on left: 16 17 18 19 20 21
        on right: 49 113 124
    functionDefinition <node> (79)
        on left: 22
        on right: 2
    functionHeader <node> (80)
        on left: 23
        on right: 22
    functionName <node> (81)
        on left: 24
        on right: 23
    headerParametersBlockInit (82)
        on left: 25
        on right: 23
    headerParametersBlockEnd (83)
        on left: 26
        on right: 23
    headerParameters <node> (84)
        on left: 27 28
        on right: 26
    headerParametersList <node> (85)
        on left: 29 30
        on right: 27 29
    commandBlockInit <node> (86)
        on left: 31
        on right: 43 61 62 64 65
    commandBlockEnd <node> (87)
        on left: 32
        on right: 22 43 61 62 64 65
    functionCommandBlockInit (88)
        on left: 33
        on right: 22
    commandList <node> (89)
        on left: 34 35
        on right: 32 34
    command <node> (90)
        on left: 36 37 38 39 40 41 42 43
        on right: 34
    attribution <node> (91)
        on left: 44 45
        on right: 37 65
    inputOutput <node> (92)
        on left: 46 47
        on right: 38
    output <node> (93)
        on left: 48 49
        on right: 47
    input <node> (94)
        on left: 50
        on right: 46
    shift <node> (95)
        on left: 51 52
        on right: 40
    shiftOperator <node> (96)
        on left: 53 54
        on right: 51 52
    executionControl <node> (97)
        on left: 55 56 57
        on right: 41
    fluxControl <node> (98)
        on left: 58 59 60
        on right: 42
    conditional <node> (99)
        on left: 61
        on right: 58
    else <node> (100)
        on left: 62 63
        on right: 61
    while <node> (101)
        on left: 64
        on right: 59
    for <node> (102)
        on left: 65
        on right: 60
    expression <node> (103)
        on left: 66 67
        on right: 44 45 55 61 64 65 66 118 120 126 127
    orLogicalExpression <node> (104)
        on left: 68 69
        on right: 66 67 68
    andLogicalExpression <node> (105)
        on left: 70 71
        on right: 68 69 70
    bitwiseOrExpression <node> (106)
        on left: 72 73
        on right: 70 71 72
    bitwiseAndExpression <node> (107)
        on left: 74 75
        on right: 72 73 74
    equalityExpression <node> (108)
        on left: 76 77
        on right: 74 75 76
    comparisonExpression <node> (109)
        on left: 78 79
        on right: 76 77 78
    sumExpression <node> (110)
        on left: 80 81
        on right: 78 79 80
    multiplicationExpression <node> (111)
        on left: 82 83
        on right: 80 81 82
    powerExpression <node> (112)
        on left: 84 85
        on right: 82 83 84
    unaryExpression <node> (113)
        on left: 86 87
        on right: 84 85 86
    orLogicalOperator <node> (114)
        on left: 88
        on right: 68
    andLogicalOperator <node> (115)
        on left: 89
        on right: 70
    bitwiseOrOperator <node> (116)
        on left: 90
        on right: 72
    bitwiseAndOperator <node> (117)
        on left: 91
        on right: 74
    equalityOperator <node> (118)
        on left: 92 93
        on right: 76
    comparisonOperator <node> (119)
        on left: 94 95 96 97
        on right: 78
    sumOperator <node> (120)
        on left: 98 99
        on right: 80
    multiplicationOperator <node> (121)
        on left: 100 101 102
        on right: 82
    powerOperator <node> (122)
        on left: 103
        on right: 84
    unaryOperator <node> (123)
        on left: 104 105 106 107 108 109 110
        on right: 86
    variableDeclaration <node> (124)
        on left: 111
        on right: 36
    variable <node> (125)
        on left: 112 113 114
        on right: 111 115
    variableDeclarationList <node> (126)
        on left: 115 116
        on right: 111 115
    functionCall <node> (127)
        on left: 117
        on right: 39 125
    functionParameters <node> (128)
        on left: 118 119
        on right: 117
    functionParametersList <node> (129)
        on left: 120 121
        on right: 118 120
    operand <node> (130)
        on left: 122 123 124 125 126
        on right: 87
    vector_identifier <node> (131)
        on left: 127
        on right: 45 52 123
    identifier <node> (132)
        on left: 128 129
        on right: 8 9
    positive_integer <node> (133)
        on left: 130 131
        on right: 52 129


State 0

    0 $accept: • program $end

    TK_PR_STATIC  shift, and go to state 1

    $end      reduce using rule 3 (program)
    $default  reduce using rule 5 (optionalStatic)

    program             go to state 2
    optionalStatic      go to state 3
    globalVariable      go to state 4
    functionDefinition  go to state 5
    functionHeader      go to state 6
    functionName        go to state 7


State 1

    4 optionalStatic: TK_PR_STATIC •

    $default  reduce using rule 4 (optionalStatic)


State 2

    0 $accept: program • $end

    $end  shift, and go to state 8


State 3

    8 globalVariable: optionalStatic • type identifier globalVariableList ';'
   24 functionName: optionalStatic • type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 9
    TK_PR_FLOAT   shift, and go to state 10
    TK_PR_BOOL    shift, and go to state 11
    TK_PR_CHAR    shift, and go to state 12
    TK_PR_STRING  shift, and go to state 13

    type  go to state 14


State 4

    1 program: globalVariable • program

    TK_PR_STATIC  shift, and go to state 1

    $end      reduce using rule 3 (program)
    $default  reduce using rule 5 (optionalStatic)

    program             go to state 15
    optionalStatic      go to state 3
    globalVariable      go to state 4
    functionDefinition  go to state 5
    functionHeader      go to state 6
    functionName        go to state 7


State 5

    2 program: functionDefinition • program

    TK_PR_STATIC  shift, and go to state 1

    $end      reduce using rule 3 (program)
    $default  reduce using rule 5 (optionalStatic)

    program             go to state 16
    optionalStatic      go to state 3
    globalVariable      go to state 4
    functionDefinition  go to state 5
    functionHeader      go to state 6
    functionName        go to state 7


State 6

   22 functionDefinition: functionHeader • functionCommandBlockInit commandBlockEnd

    '{'  shift, and go to state 17

    functionCommandBlockInit  go to state 18


State 7

   23 functionHeader: functionName • headerParametersBlockInit headerParametersBlockEnd

    '('  shift, and go to state 19

    headerParametersBlockInit  go to state 20


State 8

    0 $accept: program $end •

    $default  accept


State 9

   11 type: TK_PR_INT •

    $default  reduce using rule 11 (type)


State 10

   12 type: TK_PR_FLOAT •

    $default  reduce using rule 12 (type)


State 11

   14 type: TK_PR_BOOL •

    $default  reduce using rule 14 (type)


State 12

   13 type: TK_PR_CHAR •

    $default  reduce using rule 13 (type)


State 13

   15 type: TK_PR_STRING •

    $default  reduce using rule 15 (type)


State 14

    8 globalVariable: optionalStatic type • identifier globalVariableList ';'
   24 functionName: optionalStatic type • TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 21

    identifier  go to state 22


State 15

    1 program: globalVariable program •

    $default  reduce using rule 1 (program)


State 16

    2 program: functionDefinition program •

    $default  reduce using rule 2 (program)


State 17

   33 functionCommandBlockInit: '{' •

    $default  reduce using rule 33 (functionCommandBlockInit)


State 18

   22 functionDefinition: functionHeader functionCommandBlockInit • commandBlockEnd
